# raytracer-lcg-2014

./: .gitignore  BUGLIST  CMakeLists.txt  Class.dia  DOC.org  NOTES  PLANNING.org  README.md  README.org  TODO  Vagrantfile  a.dot  cinclude2dot.md  cinclude2dot.txt  description.md
lib/: CMakeLists.txt  Doxyfile  Raytracer.cpp  Raytracer.h  RaytracerApi.cpp  RaytracerApi.h  documentation.dox  documentation.md  fetch-pcs-detection.sh  includes.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  resources.qrc
lib/ply/: CUBE  cube.ply
lib/raytracer/: .#CMakeLists.txt
lib/raytracer/BRDFs/: BRDF.cpp  BRDF.h  GlossySpecular.cpp  GlossySpecular.h  Lambertian.cpp  Lambertian.h  PerfectSpecular.cpp  PerfectSpecular.h
lib/raytracer/Cameras/: Camera.cpp  Camera.h  Orthographic.cpp  Orthographic.h  Pinhole.cpp  Pinhole.h
lib/raytracer/GeometricObjects/: Annulus.h  Box.cpp  Box.h  Compound.cpp  Compound.h  Disk.cpp  Disk.h  GeometricObject.cpp  GeometricObject.h  OpenCylinder.cpp  OpenCylinder.h  PartOpenCylinder.cpp  PartOpenCylinder.h  PartSphere.cpp  Plane.cpp  Plane.h  PrimitivaDaniel.cpp  PrimitivaDaniel.h  RaytracerPlane.cpp  RaytracerPlane.h  RaytracerSphere.cpp  RaytracerSphere.h  Rectangle.cpp  Rectangle.h  Sphere.cpp  Sphere.h  Torus.cpp  Torus.h  Triangle.cpp  Triangle.h
lib/raytracer/Lights/: Ambient.cpp  Ambient.h  AmbientOccluder.cpp  AmbientOccluder.h  AreaLight.cpp  AreaLight.h  Directional.cpp  Directional.h  DirectionalLight.cpp  DirectionalLight.h  EnvironmentLight.cpp  EnvironmentLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
lib/raytracer/Materials/: Emissive.cpp  Emissive.h  Material.cpp  Material.h  Matte.cpp  Matte.h  Phong.cpp  Phong.h  Reflective.cpp  Reflective.h
lib/raytracer/Samplers/: Hammersley.cpp  Hammersley.h  Jittered.cpp  Jittered.h  MultiJittered.cpp  MultiJittered.h  NRooks.cpp  NRooks.h  PureRandom.cpp  PureRandom.h  Regular.cpp  Regular.h  Sampler.cpp  Sampler.h
lib/raytracer/Tracers/: AreaLighting.cpp  AreaLighting.h  MultipleObjects.cpp  MultipleObjects.h  Tracer.cpp  Tracer.h  Whitted.cpp  Whitted.h
lib/raytracer/Utilities/: BBox.cpp  BBox.h  RGBColor.cpp  RGBColor.h  Ray.cpp  Ray.h  ShadeRec.cpp  ShadeRec.h  Utilities.cpp  Utilities.h
lib/raytracer/World/: BBox.cpp  BBox.h  BoostMine.hpp  Camera.cpp  Camera.h  RGBColor.cpp  RGBColor.h  Ray.cpp  Ray.h  ShadeRec.cpp  ShadeRec.h  Utilities.h  ViewPlane.cpp  ViewPlane.h  World.cpp  World.h
lib/raytracer/stash/: Annulus.cpp  Annulus.h  PartOpenCylinder.cpp  PartOpenCylinder.h  PartSphere.h
lib/tests/: serialization_tests.cpp  unit_tests.cpp
projects/: CMakeLists.txt  Raytracer.cpp  Raytracer.h  SHAPES2  SHAPES3  main.cpp  main.cppk  main.h  main_qt.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
projects/cinclude2dot/: README.md
projects/pcs-detection/: CMakeLists.txt  fetch.sh
projects/raytracer/: CMakeLists.txt
projects/raytracer/BRDFs/: BRDF.cpp  BRDF.h  GlossySpecular.cpp  GlossySpecular.h  Lambertian.cpp  Lambertian.h  PerfectSpecular.cpp  PerfectSpecular.h
projects/raytracer/Cameras/: Camera.cpp  Camera.h  FishEye.cpp  FishEye.h  Orthographic.cpp  Orthographic.h  Ortographic.cpp  Ortographic.h  Pinhole.cpp  Pinhole.h  Spherical.cpp  Spherical.h
projects/raytracer/GeometricObjects/: GeometricObject.cpp  GeometricObject.h  PrimitivaDaniel.cpp  PrimitivaDaniel.h  RaytracerPlane.cpp  RaytracerPlane.h  RaytracerSphere.cpp  RaytracerSphere.h  Rectangle.cpp  Triangle.cpp  Triangle.h
projects/raytracer/Lights/: Ambient.cpp  Ambient.h  AmbientOccluder.cpp  AmbientOccluder.h  AreaLight.h  Directional.cpp  Directional.h  EnvironmentLight.cpp  EnvironmentLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
projects/raytracer/Materials/: Emissive.cpp  Emissive.h  Material.cpp  Material.h  Matte.cpp  Matte.h  Phong.cpp  Phong.h  Reflective.cpp  Reflective.h
projects/raytracer/Samplers/: Hammersley.cpp  Hammersley.h  Jittered.cpp  Jittered.h  NRooks.cpp  NRooks.h  Regular.cpp  Regular.h  Sampler.cpp  Sampler.h
projects/raytracer/Tracers/: AreaLighting.cpp  AreaLighting.cppk  AreaLighting.hk  MultipleObjects.cpp  MultipleObjects.h  RayCast.cpp  RayCast.h  Tracer.cpp  Tracer.h  Whitted.cpp  Whitted.h
projects/raytracer/Utilities/: BBox.cpp  BBox.h  Constants.h  RGBColor.cpp  RGBColor.h  Randomness.cpp  Randomness.h  Ray.cpp  Ray.h  ShadeRec.cpp  ShadeRec.h  Utilities.cpp  Utilities.h
projects/raytracer/World/: Raytracer.cpp  Raytracer.h  ViewPlane.cpp  ViewPlane.h  World.cpp  World.h
projects/raytracer/src/BRDFs/: BRDF.cpp  GlossySpecular.cpp  GlossySpecular.h  PerfectSpecular.cpp
projects/raytracer/src/Cameras/: FishEye.h  Pinhole.cpp
projects/raytracer/src/GeometricObjects/: RaytracerPlane.h  RaytracerSphere.cpp
projects/raytracer/src/Lights/: Ambient.h
projects/raytracer/src/Materials/: Material.cpp  (+2 more)
src/: CMakeLists.txt  main.cpp  main.h
src/BRDFs/: BRDF.cpp  BRDF.h  GlossySpecular.h  Lambertian.cpp  Lambertian.h  PerfectSpecular.cpp  PerfectSpecular.h
src/Cameras/: Camera.cpp  Camera.h  FishEye.cpp  FishEye.h  Pinhole.cpp  Pinhole.h  ThinLens.cppk  ThinLens.hk
src/GeometricObjects/: GeometricObject.cpp  GeometricObject.h  Plane.cpp  Plane.h  PrimitivaDaniel.cpp  PrimitivaDaniel.h  Sphere.cpp  Sphere.h
src/Lights/: Ambient.cpp  Ambient.h  Directional.cpp  Directional.h  Light.cpp  Light.h
src/Main/: main.cpp  pngpp.cpp  pngpp.h
src/Materials/: Material.cpp  Material.h  Matte.cpp  Matte.h  Phong.cpp  Phong.h  Reflective.cppk  Reflective.h
src/Png/: pngpp.cpp  pngpp.h
src/Samplers/: Jittered.h  MultiJittered.cpp  PureRandom.cpp  PureRandom.h  Regular.h  Sampler.cppk  Sampler.h
src/Tracers/: MultipleObjects.cpp  MultipleObjects.h  RayCast.cpp  RayCast.h  SingleSphere.cpp  Tracer.cpp  Tracer.h
src/Utilities/: Constants.h  Maths.h  RGBColor.cpp  RGBColor.h  Randomness.cpp  Randomness.h  Ray.cpp  Ray.h  ShadeRec.cpp  ShadeRec.h  Vector3D.hh
src/World/: ViewPlane.cpp  ViewPlane.h  World.cpp  World.h
tests/: CMakeLists.txt  hello.cpp  testHelloWorld.cpp  testRGBColor.cpp  tests.cpp
(+24 files in other folders)
