# RAYTRACER
set(RAYTRACER_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
subdirlist(RAYTRACER_INCLUDE_DIRS "${RAYTRACER_DIR}")
set(RAYTRACER_INCLUDE_DIRS "${RAYTRACER_INCLUDE_DIRS}" PARENT_SCOPE)
file(GLOB_RECURSE RAYTRACER_HEADERS "${RAYTRACER_DIR}/*.h")
file(GLOB_RECURSE RAYTRACER_SOURCES "${RAYTRACER_DIR}/*.cpp")

message("aaabegin")
message("${PCS_DETECTION_INCLUDE_DIRS}")
message("aaaend")

include_directories(${PCS_DETECTION_INCLUDE_DIRS})
include_directories(${RAYTRACER_INCLUDE_DIRS})
add_library(RAYTRACER_LIBRARY OBJECT ${RAYTRACER_SOURCES})
