# RAYTRACER

set(RAYTRACER_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
set(RAYTRACER_DIR "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)

# subdirlist(RAYTRACER_INCLUDE_DIRS "${RAYTRACER_DIR}")
file(
  GLOB
  RAYTRACER_INCLUDE_DIRS
  "${RAYTRACER_DIR}/BRDFs"
  "${RAYTRACER_DIR}/Cameras"
  "${RAYTRACER_DIR}/GeometricObjects"
  "${RAYTRACER_DIR}/Lights"
  "${RAYTRACER_DIR}/Materials"
  "${RAYTRACER_DIR}/Samplers"
  "${RAYTRACER_DIR}/Tracers"
  "${RAYTRACER_DIR}/Utilities"
  "${RAYTRACER_DIR}/World"
  )
set(RAYTRACER_INCLUDE_DIRS "${RAYTRACER_INCLUDE_DIRS}" PARENT_SCOPE)

file(GLOB_RECURSE RAYTRACER_SOURCES "${RAYTRACER_DIR}/*.cpp")
file(GLOB_RECURSE RAYTRACER_HEADERS "${RAYTRACER_DIR}/*.h")

include_directories(${RAYTRACER_INCLUDE_DIRS})

add_library(RAYTRACER_LIBRARY OBJECT ${RAYTRACER_SOURCES})
